--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Form</title>
 </head>
 <body>
-    <h1>Form</h1>
+    <h1>Client Side Form</h1>
   <form action="/submit" method="post">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name"><br><br>
